# cooplan-definitions-provider

./: .gitignore  Cargo.toml  config.json
.github/workflows/: integration.yml
src/: definition_downloader.rs  definition_downloader_async_wrapper.rs  definition_downloader_state.rs  definition_file_reader.rs  definition_git_downloader.rs  definition_reader_state.rs  definition_repository.rs  error.rs  main.rs
src/config/: config.rs  config_file_reader.rs  config_reader.rs  config_reader_builder.rs  definition_downloader_config.rs  git_config.rs  mod.rs  output_config.rs
src/definition/: definition_repository.rs  downloader_async_wrapper.rs  downloader_state.rs  file_reader.rs  git_downloader.rs  git_version_detector.rs  in_memory_repository.rs  mod.rs  output_async_wrapper.rs  rabbitmq_output.rs  reader_state.rs  repository.rs
src/git/: clone.rs  pull.rs
