[package]
name = "cooplan-definitions-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }

# AMQP
lapin = "2.1"

tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"